More changes to tests